fix misaligned intended lines

--- a/github-code-wrap.user.css
+++ b/github-code-wrap.user.css
@@ -18,6 +18,6 @@
     display: block !important;
   }
   td.blob-code-inner {
-    display: flex !important;
+    display: block !important;
   }
 }
